fabric/testdata/out/ing_fabric-demo-app-get-api-contributors-rl-users-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-http2":"true","zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"https://identity.zalando.com/managed-id\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e clusterClientRatelimit(\"fabric-demo-app_api-contributors_GET_users\",
      10000, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/contributors\") \u0026\u0026 Method(\"GET\") \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\",
      \"users\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"1b09e061-d197-4ded-bf66-227551ae018c","deployment-id":"d-djq37m98ip2xqujdwbnxbucyp","pipeline-id":"l-siee3x8vnzbr7czzto12ofbji"},"name":"fabric-demo-app-get-api-contributors-rl-users-all","namespace":"default"},"spec":{"rules":[{"host":"fabric-demo-app.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"fabric-demo-app","servicePort":"http"},"pathType":"Implementatio [...]
    zalando.org/aws-load-balancer-http2: "true"
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> clusterClientRatelimit("fabric-demo-app_api-contributors_GET_users",
      10000, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/contributors") && Method("GET")
      && JWTPayloadAllKV("https://identity.zalando.com/realm", "users") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2021-02-17T11:07:07Z"
  generation: 1
  labels:
    controller-uid: 1b09e061-d197-4ded-bf66-227551ae018c
    deployment-id: d-djq37m98ip2xqujdwbnxbucyp
    pipeline-id: l-siee3x8vnzbr7czzto12ofbji
  name: fabric-demo-app-get-api-contributors-rl-users-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: fabric-demo-app
    uid: 1b09e061-d197-4ded-bf66-227551ae018c
  resourceVersion: "1357488584"
  uid: 1c7c5222-cb07-42fd-b103-2784fb99f638
spec:
  rules:
  - host: fabric-demo-app.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: fabric-demo-app
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
